# gatera

./: API.md  BOUNTIES.md  Gatera_ETHSilesia.pptx  README.md  TEAM_MEMBERS.md
backend/: Cargo.toml  README.md
backend/src/: counterparty.rs  ethereum.rs  handlers.rs  heuristics.rs  main.rs  models.rs  pricing.rs  utils.rs
frontend/: README.md  package-lock.json  package.json  test.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/reports/: page.tsx
frontend/app/dashboard/screening/: page.tsx
frontend/app/dashboard/wallets/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
