[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.2", features = ["cors"] }
